# projet-2026

./: .gitignore  README.md  build.sh  gaze_vector.txt  main.py  pyproject.toml  tests.py
app/: app.py  style.css
app/assets/: assets.qrc
app/modules/: assets.py  contacts.py  eye_tracking.py  gaze.py  logging.py  mail.py  messages.py  settings.py  tts.py  utils.py
app/modules/eye_tracking/: eye_cam.py  test.py  test_2.py  test_class.py  test_open_source.py  tracking.py
app/pages/: __init__.py  calibration.py  contact.py  contacts.py  keyboard.py  menu.py  message.py  messages.py  page.py  settings.py
app/widgets/: __init__.py  button.py  eye_widget.py  gaze_widget.py  keyboard.py  keyboard_widget.py  layouts.py  line_edit.py  markers.py  push_button.py  text_display.py  widget.py
dev/: coords.json  gaze_prep.py  word_curves_gen.py  word_paths_gen.py  words.csv
