[project]
name = "projet-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cv2-enumerate-cameras>=1.3.3",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "kokoro>=0.9.4",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "piper-tts>=1.4.1",
    "pyinstaller>=6.19.0",
    "pyside6>=6.10.2",
    "sounddevice>=0.5.5",
]
